# tennis-model

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_market_efficiency.ipynb
reports/: phase0_data_gaps.md
tennis_model/backtest/: engine.py
tennis_model/ingest/: merge.py  sackmann.py  tennis_data_uk.py
tennis_model/markets/: __init__.py  base.py  moneyline.py  set_spread.py  total_games.py
tennis_model/strategies/: base.py  baselines.py
tests/: test_backtester.py  test_markets.py  test_score_parsing.py
