[project]
name = "tennis-model"
version = "0.1.0"
description = "Tennis picks model covering moneyline, total games O/U, and set spread for ATP + WTA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "requests>=2.31",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "rapidfuzz>=3.6",
    "tqdm>=4.66",
    "xlrd>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tennis_model"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
